Fix spacing issue in Chrome

--- a/Readmore page/custom.css
+++ b/Readmore page/custom.css
@@ -213,7 +213,7 @@ body{
 }
   
 .search-bar > .button:hover {
-    background-color: rgba(0, 150, 136, 0.8);
+    background-color: #d0021b;
 }
 
 .tieu-de-chuong{
@@ -328,8 +328,7 @@ a:hover, a:visited, a:link, a:focus {
     border-top-color: #f44336;
     border-top-style: solid;
     border-top-width: 2px;
-    border-bottom-color: rgb(221, 221, 221);
-    border-bottom-color: transparent;
+    border-bottom: 1px solid rgb(221, 221, 221);
     cursor: default;
 }
 .main-comment > form > textarea{
@@ -342,6 +341,7 @@ a:hover, a:visited, a:link, a:focus {
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     margin-bottom: 30px;
+    position: relative;
 }
 .div_input_comment{
     width: 80%;
@@ -351,14 +351,25 @@ a:hover, a:visited, a:link, a:focus {
     margin-top: 9px;
     margin-bottom: 9px;
     margin-left: 10px;
-    padding: 2px;
+    padding: 3px;
+    width: 300px;
 }
-.submit_comment{
+.submit_comment_wrapper{
     float:right;
-    margin-right: 10px;
-    margin-top:7px;
+    height: 100%;
+    margin-right: 15px;
+    margin-top: 7px;
+}
+.submit_comment_wrapper::before{
+    content: "";
+    display: inline-block;
+    height:100%;
+    vertical-align: middle;
 }
 .comments-list {
     margin-top: 30px;
     position: relative;
+}
+#content_comment{
+    vertical-align: top;
 }
